src/test/ui/parser/issue-72253.stderr
error: expected one of `.`, `;`, `?`, or an operator, found `,`
  --> $DIR/issue-72253.rs:4:9
   |
LL |         .arg("1")
   |                  - expected one of `.`, `;`, `?`, or an operator
LL |         ,arg("2")
   |         ^ unexpected token

error: aborting due to previous error

